--- a/index.html
+++ b/index.html
@@ -1,180 +1,48 @@
-<html>
-<head>
-    <title>网址导航</title>
-</head>
-<meta charset="utf-8">
-<body bgcolor="#F0E68C">
-<form>
-  <fieldset>
-    <legend></legend>
-  </fieldset>
-</form>
-<center>
-    <legend><font size="6" color="green">网址导航</font>
-    <br>
-</center>
-<form>
-  <fieldset>
-    <legend>英语学习</legend>
-<nav>
-    <font size="3">
-        <a href="http://www.ftchinese.com/channel/ce.html">FT中文网 双语阅读</a>   |
-        <a href="http://www.ftchinese.com/channel/speedread.html">FT中文网 FT英语速读</a>  |
-        <a href="http://www.ftchinese.com/channel/ev.html">FT中文网 原声视频</a>   |
-        <a href="http://www.ftchinese.com/channel/radio.html">FT中文网 FT英语电台</a>  |
-        <a href="http://www.npr.org/">美国国家公共广播电台</a>    |
-        <a href="http://edition.cnn.com/">美国有线电视新闻网CNN</a>  |
-        <a href="http://www.bbc.com/news">BBC新闻</a> |
-        <a href="https://www.ted.com/">TED</a>  |
-        <a href="http://www.iciba.com/">金山词霸</a>    |
-        <a href="http://fanyi.baidu.com/">百度翻译</a>  |
-        <a href="http://fanyi.youdao.com/">有道翻译</a> |
-        <a href="https://translate.google.cn/">Google翻译</a> |
-        <a href="http://dict.cn/">海词词典</a>  |
-    </font>
-</nav>
-  </fieldset>
-</form>
-    <br>
-<form>
-  <fieldset>
-    <legend>计算机资源镜像站</legend>
-<nav>
-    <font size="3">
-        <a href="http://mirrors.aliyun.com/">阿里云开源镜像站</a>   |
-        <a href="http://mirrors.163.com/">网易开源镜像站</a>   |
-        <a href="http://mirrors.ustc.edu.cn/">中国科学技术大学开源镜像站</a> |
-        <a href="https://mirrors.tuna.tsinghua.edu.cn/">清华大学开源软件镜像站</a> |
-        <a href="http://ftp.sjtu.edu.cn/">上海交通大学开源镜像站</a>   |
-        <a href="http://mirrors.zju.edu.cn/">浙江大学开源镜像站</a>  |
-        <a href="http://mirror.neu.edu.cn/">东北大学开源镜像站</a>   |
-        <a href="http://www.debian.org/mirror/list">Debian全球镜像站</a> |
-    </font>
-</nav>
-  </fieldset>
-</form>
-    <br>
-<form>
-  <fieldset>
-    <legend>Linux</legend>
-<nav>
-    <font size="3">
-        <a href="https://www.linux.org/">Linux</a>
-        <a href="https://www.kali.org/">Kali Linux</a>  |
-        <a href="http://www.kali.org.cn/">Kali Linux中文网</a> |
-        <a href="https://www.ubuntu.com/index_kylin">Ubuntu Linux</a>   |
-        <a href="https://www.centos.org/">CentOS Linux</a>  |
-        <a href="https://access.redhat.com/">RedHat Linux</a>   |
-        <a href="http://www.chinaunix.net/">ChinaUnix</a>   |
-        <a href="http://www.linuxidc.com/">Linux公社</a>  |
-        <a href="http://linux.vbird.org/">鸟哥的Linux私房菜</a>   |
-        <a href="https://linux.cn/">Linux中国开源社区</a> |
-        <a href="http://www.linuxdiyf.com/">红联Linux</a> |
-        <a href="http://www.linuxeden.com/">Linuxeden开源社区</a>   |
-        <a href="https://www.linuxfoundation.org/">The Linux Foundation</a> |
-    </font>
-</nav>
-  </fieldset>
-</form>
-    <br>
-<form>
-  <fieldset>
-    <legend>计算机程序设计</legend>
-<nav>
-    <font size="3">
-        <a href="https://www.python.org/">Python</a>    |
-        <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">Java SE</a>    |
-        <a href="http://www.runoob.com/">RUNOOB</a> |
-        <a href="http://www.w3school.com.cn/">W3school</a>  |
-        <a href="https://www.eclipse.org/">Eclipse</a>  |
-    </font>
-</nav>
-  </fieldset>
-</form>
-    <br>
-<form>
-  <fieldset>
-    <legend>资料查询</legend>
-<nav>
-    <font size="3">
-        <a href="https://www.wikipedia.org/">维基百科</a>   |
-        <a href="https://www.baidu.com/">百度</a> |
-        <a href="https://www.bing.com/?intlF=">Bing</a> |
-        <a href="https://www.zhihu.com/">知乎</a> |
-        <a href="https://www.quora.com/">Quora</a>  |
-        <a href="https://stackoverflow.com/">StackOverflow</a>  |
-        <a href="http://www.chongbuluo.com/">虫部落</a>    |
-    </font>
-</nav>
-  </fieldset>
-</form>
-    <br>
-<form>
-  <fieldset>
-    <legend>技术参考</legend>
-<nav>
-    <font size="3">
-        <a href="http://www.williamlong.info/">月光博客</a> |
-        <a href="http://www.freebuf.com/">FreeBuf</a>   |
-        <a href="http://www.iplaysoft.com/">异次元软件</a>   |
-        <a href="https://bbs.pediy.com/">看雪安全论坛</a> |
-        <a href="https://www.2cto.com/">红黑联盟</a>    |
-        <a href="http://bobao.360.cn/index/index">安全客</a>   |
-        <a href="https://technet.microsoft.com/en-us/">Microsoft TechNet</a>    |
-    </font>
-</nav>
-  </fieldset>
-</form>
-    <br>
-<form>
-  <fieldset>
-    <legend>代码维护</legend>
-<nav>
-    <font size="3">
-        <a href="https://github.com/">GitHub</a>    |
-        <a href="https://www.openshift.com/">OpenShift</a>  |
-        <a href="https://about.gitlab.com/">GitLab</a>  |
-        <a href="https://gitee.com/">码云</a> |
-    </font>
-</nav>
-  </fieldset>
-</form>
-    <br>
-<form>
-  <fieldset>
-    <legend>站长工具</legend>
-<nav>
-    <font size="3">
-        <a href="http://zhanzhang.baidu.com/">百度站长平台</a>    |
-        <a href="http://tool.chinaz.com/">站长之家 站长工具</a> |
-        <a href="https://thepaperwall.com/">The Paper Wall</a>  |
-    </font>
-</nav>
-  </fieldset>
-</form>
-    <br>
-<form>
-  <fieldset>
-    <legend>放松一下</legend>
-<nav>
-    <font size="3">
-        <a href="https://daily.zhihu.com/">知乎日报</a> |
-        <a href="http://jandan.net/">煎蛋</a> |
-        <a href="http://www.guokr.com/">果壳</a>  |
-        <a href="http://songshuhui.net/">科学松鼠会</a>  |
-        <a href="http://www.sfw.com.cn/">科幻世界</a>   |
-        <a href="https://what-if.xkcd.com/">What If</a> |
-        <a href="https://www.bilibili.com/">哔哩哔哩</a>    |
-    </font>
-</nav>
-  </fieldset>
-</form>
-    <br>
-<form>
-  <fieldset>
-    <legend></legend>
-  </fieldset>
-</form>
-</body>
-</html>
-end
+﻿<!DOCTYPE NETSCAPE-Bookmark-file-1>
+<!-- This is an automatically generated file.
+It will be read and overwritten.
+Do Not Edit! -->
+<TITLE>Bookmarks</TITLE>
+<H1>Bookmarks</H1>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
+<DL><P>
+<DT><A HREF="https://www.sogou.com/sogou?pid=sogou-brse-1cdf14d1e3699d61&query=%BB%AD%BD%AD%BA%FE%D6%AE%B2%BB%C1%BC%C8%CB%B5%DA3%BC%BE_%C3%E2%B7%D1%D4%DA%CF%DF%B9%DB%BF%B4%2C%B6%C0%BC%D2%B8%DF%C7%E5%D4%C6%B2%A5%B7%C5-V%B2%BF%C2%E4&url404=http%3A%2F%2Fwww.vbuluo.com%2Fv_46999.html" ADD_DATE="107728241853">画江湖之不良人第3季_免费在线观看,独家高清云播放-V部落 - 搜狗搜索</A>
+<DT><A HREF="https://123.sogou.com/" ADD_DATE="107728241853">网址导航</A>
+<DT><A HREF="https://wan.sogou.com/api/landingpage.do?source=0012000300000" ADD_DATE="107728241853">游戏中心</A>
+<DT><A HREF="http://xs.sogou.com/?source=10001_00007_00001_" ADD_DATE="107728241853">小说大全</A>
+<DT><A HREF="https://ai.taobao.com?pid=mm_498130067_724900004_109290750287" ADD_DATE="107728241853">爱淘宝</A>
+<DT><H3 FOLDED ADD_DATE="107728241853">影视</H3>
+<DL><P>
+<DT><A HREF="http://www.manmankan.com/dy2013/" ADD_DATE="107728176569">漫漫看影视剧 - 最好的电视剧和电影天堂</A>
+<DT><A HREF="https://www.tv120.net/index.html" ADD_DATE="107728176569">天堂鸟影院</A>
+<DT><A HREF="http://www.hailiys.com/" ADD_DATE="107728176569">海狸影视-在线影视大全</A>
+<DT><A HREF="https://www.cmdy5.com/" ADD_DATE="107728176569">草民电影网_手机电影免费在线观看</A>
+<DT><A HREF="https://www.gangjuw.com/tvb/558.html" ADD_DATE="107728176569">十二传说国语版全集在线观看 - 港剧网</A>
+<DT><A HREF="http://www.nmgk.com/" ADD_DATE="107728176569">柠檬观看网-在线观看影视游戏视频综合站</A>
+<DT><A HREF="http://weibotu.com/" ADD_DATE="107728176569">微博兔免费电影网_2018最新电视剧电影在线观看</A>
+<DT><A HREF="http://www.webyingshi.com/movie/11143.html" ADD_DATE="107728176569">十二传说免费在线播放-十二传说高清全集-在线影视</A>
+<DT><A HREF="http://www.tvbme.com/play/3406-1-18.html" ADD_DATE="107728176569">正在播放《十二传说-国语第18集》_港剧网 －港剧迷</A>
+<DT><A HREF="http://www.54fq.com/detail/shierchuanshuoguoyu.html" ADD_DATE="107728176569">《十二传说国语》免费在线观看,港台剧连续剧,青苹果影院</A>
+<DT><A HREF="https://www.lungeyy.com/gangtaiju/45928-3-12.html" ADD_DATE="107728176569">甄免费包青天再起风云国语第12集伦哥酷晕在线播放-伦哥影院</A>
+<DT><A HREF="http://00m1.com/play/28927-0-9.html" ADD_DATE="107728176569">《遗失的二分之一/遗失的2分之1》01免费在线观看-馍馍电影网</A>
+<DT><A HREF="http://www.xinqixi.com/v_33618.html" ADD_DATE="107728176569">十二传说 国语_电视剧在线观看免费网站,独家高清全集 - 新气息影院</A>
+<DT><A HREF="https://www.yueyuyy.com/tv/shierchuanshuo/" ADD_DATE="107728176569">十二传说粤语版在线观看_网盘电驴迅雷下载_香港TVB电视剧_粤语影院</A>
+<DT><A HREF="http://www.yuewz.com/tvb/BaoQingTianZaiQiFengYunGuoYuBan/index.html" ADD_DATE="107728176569">《包青天再起风云国语版》正在连载中_《包青天再起风云国语版》在线观看-粤语剧</A>
+<DT><A HREF="https://www.dadatutu.com/tvb/shierchuanshuo/" ADD_DATE="107728176569">《十二传说》全集在线观看_电视剧《十二传说》免费观看_达达兔影院_达达兔电影网</A>
+<DT><A HREF="https://kan.jinbaozy.com/vodtypehtml/2.html" ADD_DATE="107728176569">消灭都市,博人传,盾之勇者成名录,鬼灭之刃,我们无法一起学习,川柳少女 - 第1页 - 劲爆综艺动漫网</A>
+<DT><A HREF="https://www.xigua110.com/cartoon/huajianghuzhibuliangrendisanji.htm" ADD_DATE="107728176569">《画江湖之不良人第三季》全集在线观看 - 动漫迅雷下载 - 西瓜影音 - 西瓜影院</A>
+<DT><A HREF="http://www.kkkkmao.com/" ADD_DATE="107728176569">最新电视剧_迅雷电影下载_2019最新电影_西瓜影音_电影电视剧在线观看_4K屋</A>
+<DT><A HREF="http://www.xdg456.com/" ADD_DATE="107728176569">小嘀咕影院_看电影的好网站_最新伦理电影在线观看_小嘀咕电影网</A>
+<DT><A HREF="http://www.xunb.cc/" ADD_DATE="107728176569">迅播影院_手机看片_云播在线电影_播播影院 - 迅播官网</A>
+<DT><A HREF="http://www.hmytv.com/" ADD_DATE="107728176569">2018最新电视剧高清电影热播美剧韩剧百度云下载在线云点播_黑蚂蚁影院-全看影院-YY4480新视觉-神马影院-秋霞电影网</A>
+<DT><A HREF="http://www.vbuluo99.com/" ADD_DATE="107728176569">V部落-神马电影院,一部影院手机免费在线观看</A>
+<DT><A HREF="https://www.dpxdy.com/" ADD_DATE="107728176569">大胖熊影院-YY6029苏格影院-YY6080新视觉影院-YY4138殇情影院</A>
+<DT><A HREF="https://www.dadatutu.com/" ADD_DATE="107728176569">达达兔影院_达达兔电影网_DaDaTu.COM</A>
+<DT><A HREF="http://www.ly6080.com.cn/" ADD_DATE="107728176569">奇领yy6080影院</A>
+<DT><A HREF="https://www.quankanwu.com/" ADD_DATE="107728176569">全看屋_全看网_韩剧网_美剧网_动漫网_ck电影网_快看影视_影视排行榜_高清影视剧免费在线观看 - 全看屋</A>
+<DT><A HREF="https://www.4y3.cn/" ADD_DATE="107728176569">光棍影院-免费推荐高清电影在线观看</A>
+<DT><A HREF="http://www.vipys.net/" ADD_DATE="107728176569">vip影视-免费vip最新电影和在线手机电影极速观看</A>
+<DT><A HREF="https://www.bt5156.com/" ADD_DATE="107728176569">BT无忧无虑电影_最新电影_高清电影_电影天堂</A>
+<DT><A HREF="http://www.hao6v.com/" ADD_DATE="107728176569">最新电影下载，最新电视剧下载，高清电影下载，免费电影下载，6v电影下载网（旧版66影视）</A>
+<DT><A HREF="http://tt.babauy.com/guocanju/" ADD_DATE="107728176569">国产剧, - 多鱼网</A>
+<DT><A HREF="http://www.40pd.cc/" ADD_DATE="107728176569">2017最新电影_迅雷下载_2
